--- a/templates/core/dashboard.html
+++ b/templates/core/dashboard.html
@@ -10,6 +10,8 @@
 {% endblock header %}
 
 {% block content %}
+Welcome
+<!--
   <div class="grid grid-cols-2 md:grid-cols-2 gap-4 p-4">
     <div class="block w-full p-4 bg-white border border-gray-200 rounded-lg shadow hover:bg-gray-100">
       <div class="flex flex-col">
@@ -232,4 +234,5 @@
     var chart = new ApexCharts(document.querySelector("#chart5"), options);
     chart.render();
   </script>
+  -->
 {% endblock content %}
