--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -9,7 +9,7 @@
   <div class="sm:mx-auto sm:w-full sm:max-w-md">
     <img class="mx-auto h-10 w-auto" src="https://tailwindui.com/img/logos/mark.svg?color=indigo&shade=600" alt="Hyperion">
     <h2 class="mt-10 text-center text-2xl font-bold leading-9 tracking-tight text-gray-900">Create an account</h2>
-  </div>
+  </div> 
 
   <div class="mt-10 mx-auto">
     <form class="space-y-6" action="{% url 'accounts:register_user' %}" method="POST">
@@ -59,8 +59,8 @@
     </form>
 
     <p class="mt-10 text-center text-sm text-gray-500">
-      Not a member?
-      <a href="#" class="font-semibold leading-6 text-indigo-600 hover:text-indigo-500">Start a 14 day free trial</a>
+      Don't have an account?
+      <a href="{% url 'accounts:login' %}" class="font-semibold leading-6 text-indigo-600 hover:text-indigo-500">Sign in</a>
     </p>
   </div>
 </div>
