--- a/templates/core/data_create.html
+++ b/templates/core/data_create.html
@@ -17,7 +17,7 @@
           <label for="name" class="block text-sm font-medium leading-6 text-gray-900">Dataset Name</label>
           <div class="mt-2">
             <div class="flex rounded-md shadow-sm ring-1 ring-inset ring-gray-300 focus-within:ring-2 focus-within:ring-inset focus-within:ring-indigo-600 sm:max-w-md">
-              <input type="text" name="name" id="name" class="block flex-1 border-0 bg-transparent py-1.5 pl-1 text-gray-900 placeholder:text-gray-400 focus:ring-0 sm:text-sm sm:leading-6" placeholder="Dataset Name">
+              <input autocomplete="off" type="text" name="name" id="name" class="block flex-1 border-0 bg-transparent py-1.5 pl-1 text-gray-900 placeholder:text-gray-400 focus:ring-0 sm:text-sm sm:leading-6" placeholder="Dataset Name">
             </div>
           </div>
         </div>
