--- a/templates/core/project_detail.html
+++ b/templates/core/project_detail.html
@@ -92,7 +92,7 @@
           <p class="font-normal text-sm text-gray-700 mb-2">{{data.description}}</p>
           <div>
             <div class="flex">
-              <img class="w-8 h-8 border-2 border-white rounded-full" src="" alt="https://ui-avatars.com/api/?name={{data.owner.username}}&rounded=true&background=random">
+              <img class="w-8 h-8 border-2 border-white rounded-full" alt="" src="https://ui-avatars.com/api/?name={{data.owner.username}}&rounded=true&background=random">
             </div>
           </div>
         </div>
