--- a/templates/core/data_detail.html
+++ b/templates/core/data_detail.html
@@ -56,7 +56,7 @@
           <a href="{% url 'core:data_analysis' data.id %}" class="block px-4 py-2 hover:bg-gray-100">Data Analysis</a>
         </li>
         <li>
-          <a href="{% url 'core:text_analysis' data.id %}" class="block px-4 py-2 hover:bg-gray-100">Text Analysis</a>
+          <a href="{% url 'core:schemaless' data.id %}" class="block px-4 py-2 hover:bg-gray-100">Schemaless Analysis</a>
         </li>
       </ul> 
     </div>
@@ -90,7 +90,6 @@
 
       <div id="moreactionsDropdown" class="hidden right-0 z-10 -mr-1 mt-2 w-48 origin-top-right rounded-md bg-white py-1 shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none" role="menu" aria-orientation="vertical" aria-labelledby="mobile-menu-button" tabindex="-1">
         <a href="{% url 'core:data_analysis' data.id %}" class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1" id="mobile-menu-item-3">Data Analysis</a>
-        <a href="{% url 'core:text_analysis' data.id %}" class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1" id="mobile-menu-item-2">Text Analysis</a>
         <a href="{% url 'core:data_update' data.id %}" class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1" id="mobile-menu-item-0">Edit</a>
         <a href="{% url 'core:data_delete' data.id %}" class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1" id="mobile-menu-item-1">Delete</a>
       </div>
